--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         }
     },
     "require": {
+        "php": ">=8.0",
+        "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
         "spatie/laravel-medialibrary": "10.*",
         "spatie/activitylog": "2.*",
