--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,7 @@
         "php": ">=8.0",
         "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
-        "spatie/laravel-medialibrary": "10.*",
-        "spatie/activitylog": "2.*",
-        "spatie/laravel-settings": "2.*"
+        "spatie/laravel-medialibrary": "10.*"
     },
     "autoload": {
         "psr-4": {
