--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "php": ">=8.0",
         "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
-        "spatie/laravel-medialibrary": "10.*"
+        "spatie/laravel-medialibrary": "10.*",
+        "spatie/laravel-activitylog": "4.*"
     },
     "autoload": {
         "psr-4": {
