--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
         "spatie/laravel-medialibrary": "10.*",
-        "spatie/laravel-activitylog": "4.*"
+        "spatie/laravel-activitylog": "4.*",
+        "spatie/laravel-settings": "2.*"
     },
     "autoload": {
         "psr-4": {
