--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require": {
         "php": ">=8.0",
+        "artmin96/filament-popover": "1.*",
         "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
         "spatie/laravel-medialibrary": "10.*",
