--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": ">=8.0",
         "artmin96/filament-popover": "1.*",
         "filament/spatie-laravel-settings-plugin":"2.*",
-        "laravel/framework": "9.0",
+        "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
         "spatie/laravel-medialibrary": "10.*",
         "spatie/laravel-activitylog": "4.*",
