--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "php": ">=8.0",
-        "artmin96/filament-popover": "1.*",
+        "filament-popover": "1.*",
         "filament/spatie-laravel-settings-plugin":"2.*",
         "laravel/framework": "~9.0",
         "spatie/laravel-permission": "5.*",
