--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
                 "Modules\\Core\\Providers\\CoreServiceProvider"
             ],
             "aliases": {
-                "Core": "Modules\\Core\\Facades\\Core"
+                "Core": "Modules\\Core\\Facades\\Core",
+                "CoreModule": "Modules\\Core\\Facades\\CoreModule"
             }
         }
     },
